// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dashboardPanel > renders with body slot correctly 1`] = `
"<div class="fixed inset-0 flex overflow-hidden">
  <div id="dashboard-panel-v-0" data-dragging="false" data-slot="root" class="relative flex flex-col min-w-0 min-h-svh lg:not-last:border-e lg:not-last:border-default shrink-0 flex-1">
    <div data-slot="body" class="flex flex-col gap-4 sm:gap-6 flex-1 overflow-y-auto p-4 sm:p-6">Body slot</div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`dashboardPanel > renders with class correctly 1`] = `
"<div class="fixed inset-0 flex overflow-hidden">
  <div id="dashboard-panel-v-0" data-dragging="false" data-slot="root" class="relative flex flex-col min-w-0 min-h-svh lg:not-last:border-e lg:not-last:border-default shrink-0 flex-1 lg:border-none">
    <div data-slot="body" class="flex flex-col gap-4 sm:gap-6 flex-1 overflow-y-auto p-4 sm:p-6"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`dashboardPanel > renders with default slot correctly 1`] = `
"<div class="fixed inset-0 flex overflow-hidden">
  <div id="dashboard-panel-v-0" data-dragging="false" data-slot="root" class="relative flex flex-col min-w-0 min-h-svh lg:not-last:border-e lg:not-last:border-default shrink-0 flex-1">Default slot</div>
  <!--v-if-->
</div>"
`;

exports[`dashboardPanel > renders with defaultSize correctly 1`] = `
"<div class="fixed inset-0 flex overflow-hidden">
  <div id="dashboard-panel-v-0" data-dragging="false" data-slot="root" class="relative flex flex-col min-w-0 min-h-svh lg:not-last:border-e lg:not-last:border-default shrink-0 w-full lg:w-(--width)" style="--width: 50%;">
    <div data-slot="body" class="flex flex-col gap-4 sm:gap-6 flex-1 overflow-y-auto p-4 sm:p-6"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`dashboardPanel > renders with footer slot correctly 1`] = `
"<div class="fixed inset-0 flex overflow-hidden">
  <div id="dashboard-panel-v-0" data-dragging="false" data-slot="root" class="relative flex flex-col min-w-0 min-h-svh lg:not-last:border-e lg:not-last:border-default shrink-0 flex-1">
    <div data-slot="body" class="flex flex-col gap-4 sm:gap-6 flex-1 overflow-y-auto p-4 sm:p-6"></div>Footer slot
  </div>
  <!--v-if-->
</div>"
`;

exports[`dashboardPanel > renders with header slot correctly 1`] = `
"<div class="fixed inset-0 flex overflow-hidden">
  <div id="dashboard-panel-v-0" data-dragging="false" data-slot="root" class="relative flex flex-col min-w-0 min-h-svh lg:not-last:border-e lg:not-last:border-default shrink-0 flex-1">Header slot<div data-slot="body" class="flex flex-col gap-4 sm:gap-6 flex-1 overflow-y-auto p-4 sm:p-6"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`dashboardPanel > renders with id correctly 1`] = `
"<div class="fixed inset-0 flex overflow-hidden">
  <div id="dashboard-panel-test" data-dragging="false" data-slot="root" class="relative flex flex-col min-w-0 min-h-svh lg:not-last:border-e lg:not-last:border-default shrink-0 flex-1">
    <div data-slot="body" class="flex flex-col gap-4 sm:gap-6 flex-1 overflow-y-auto p-4 sm:p-6"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`dashboardPanel > renders with maxSize correctly 1`] = `
"<div class="fixed inset-0 flex overflow-hidden">
  <div id="dashboard-panel-v-0" data-dragging="false" data-slot="root" class="relative flex flex-col min-w-0 min-h-svh lg:not-last:border-e lg:not-last:border-default shrink-0 flex-1">
    <div data-slot="body" class="flex flex-col gap-4 sm:gap-6 flex-1 overflow-y-auto p-4 sm:p-6"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`dashboardPanel > renders with minSize correctly 1`] = `
"<div class="fixed inset-0 flex overflow-hidden">
  <div id="dashboard-panel-v-0" data-dragging="false" data-slot="root" class="relative flex flex-col min-w-0 min-h-svh lg:not-last:border-e lg:not-last:border-default shrink-0 flex-1">
    <div data-slot="body" class="flex flex-col gap-4 sm:gap-6 flex-1 overflow-y-auto p-4 sm:p-6"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`dashboardPanel > renders with resizable correctly 1`] = `
"<div class="fixed inset-0 flex overflow-hidden">
  <div id="dashboard-panel-v-0" data-dragging="false" data-slot="root" class="relative flex flex-col min-w-0 min-h-svh lg:not-last:border-e lg:not-last:border-default shrink-0 flex-1">
    <div data-slot="body" class="flex flex-col gap-4 sm:gap-6 flex-1 overflow-y-auto p-4 sm:p-6"></div>
  </div>
  <div role="separator" class="hidden lg:block touch-none select-none cursor-ew-resize relative before:absolute before:inset-y-0 before:-left-1.5 before:-right-1.5 before:z-1" aria-controls="dashboard-panel-v-0" data-slot="handle"></div>
</div>"
`;

exports[`dashboardPanel > renders with resize-handle slot correctly 1`] = `
"<div class="fixed inset-0 flex overflow-hidden">
  <div id="dashboard-panel-v-0" data-dragging="false" data-slot="root" class="relative flex flex-col min-w-0 min-h-svh lg:not-last:border-e lg:not-last:border-default shrink-0 flex-1">
    <div data-slot="body" class="flex flex-col gap-4 sm:gap-6 flex-1 overflow-y-auto p-4 sm:p-6"></div>
  </div>Resize handle slot
</div>"
`;

exports[`dashboardPanel > renders with ui correctly 1`] = `
"<div class="fixed inset-0 flex overflow-hidden">
  <div id="dashboard-panel-v-0" data-dragging="false" data-slot="root" class="relative flex flex-col min-w-0 min-h-svh lg:not-last:border-e lg:not-last:border-default shrink-0 flex-1">
    <div data-slot="body" class="flex flex-col gap-4 sm:gap-6 flex-1 overflow-y-auto p-4 sm:p-6 p-8"></div>
  </div>
  <!--v-if-->
</div>"
`;
